--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background: #000;
   height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 canvas {
     border: black 4px solid;
